ASSIGNED128157
IDB: HTML5 Rocks Indexed Database demo fails
https://bugs.webkit.org/show_bug.cgi?id=128157
Summary IDB: HTML5 Rocks Indexed Database demo fails
Brady Eidson
Reported 2014-02-03 21:06:02 PST
IDB: HTML5 Rocks Indexed Database demo fails The demo can be found here - http://www.html5rocks.com/en/tutorials/indexeddb/todo/ TODOs that you save are stored to the database, but they are never retrieved. This is because the value cursor they create never returns any values. And that is because we're choosing the wrong SQL statement for the cursor. In radar as <rdar://problem/15966095>
Attachments
Patch v1 (1.92 KB, patch)
2014-02-03 21:08 PST, Brady Eidson
no flags
Patch v2 (3.91 KB, patch)
2014-02-03 21:32 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2014-02-03 21:08:39 PST
Created attachment 223068 [details] Patch v1
Brady Eidson
Comment 2 2014-02-03 21:08:58 PST
Of the large number of layout test failures, this fixes a handful! \o/
Jon Lee
Comment 3 2014-02-03 21:27:09 PST
Comment on attachment 223068 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=223068&action=review > Source/WebKit2/DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.cpp:112 > + This is all fine except the statements are not in consistent order. Line 77-78 is open upper key, not closed upper key like in 85-86 and 92-93. > Source/WebKit2/DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.cpp:164 > + This looks good here. It might be slightly better to name the variables "hasLowerKey", "isLowerOpen", "hasUpperKey", "isUpperOpen", even though the current var names are more consistent with the IDB API.
Jon Lee
Comment 4 2014-02-03 21:27:45 PST
provisional r-!
Brady Eidson
Comment 5 2014-02-03 21:32:32 PST
Created attachment 223071 [details] Patch v2
Brady Eidson
Comment 6 2014-02-03 21:33:09 PST
Nice find, and good suggestion. New patch uploaded.
Jon Lee
Comment 7 2014-02-03 21:34:03 PST
Comment on attachment 223071 [details] Patch v2 Provisional r=me!
Brady Eidson
Comment 8 2014-02-03 21:34:33 PST
Thanks for the eyes!
Brady Eidson
Comment 9 2014-02-03 21:39:44 PST
Csaba Osztrogonác
Comment 10 2014-02-13 04:13:12 PST
Comment on attachment 223068 [details] Patch v1 Cleared Anders Carlsson's review+ from obsolete attachment 223068 [details] so that this bug does not appear in http://webkit.org/pending-commit.
Note You need to log in before you can comment on or make changes to this bug.