IDB: HTML5 Rocks Indexed Database demo fails https://bugs.webkit.org/show_bug.cgi?id=128157

Reviewed by Anders Carlsson (Provisional review by Jon Lee)

* DatabaseProcess/IndexedDB/sqlite/SQLiteIDBCursor.cpp:
(WebKit::getIndexStatement): Only increment the open/closed counters if those keys exist.
  Fix order of statements for no lower key.
(WebKit::getObjectStoreStatement): Only increment the open/closed counters if those keys exist.

Canonical link: https://commits.webkit.org/146171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163364 268f45cc-cd09-0410-ab3c-d52691b4dbfc